# Quantum_Lattice_Models

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEPRECATIONS.md  IMPORTING.md  LICENSE  Makefile  README.md  RESULTS.md  ROADMAP.md  SCHEMA.md  THEORY.md  USAGE.md  VALIDATION.md  pyproject.toml
.github/ISSUE_TEMPLATE/: adapter-gap.yml  config.yml  import-format.yml  physical-metadata.yml
.github/workflows/: optional-ecosystems.yml  pages.yml  performance.yml  publish.yml  tests.yml
benchmarks/: performance_baseline.json
case_studies/: README.md  ase_structure_intake.py  networkx_weighted_chain.py
docs/: index.html  styles.css  theory.html
docs/models/: api.html  api.md  aubry_andre.html  aubry_andre.md  benchmark_lattices.html  benchmark_lattices.md  bose_hubbard.html  bose_hubbard.md  capabilities.html  capabilities.md  custom_lattice.html  custom_lattice.md  fermi_hubbard.html  fermi_hubbard.md  haldane.html  haldane.md  harper_hofstadter.html  harper_hofstadter.md  heisenberg_chain.html  heisenberg_chain.md  heisenberg_ladder.html  heisenberg_ladder.md  index.html  index.md  ising.html  ising.md  j1_j2_heisenberg.html  j1_j2_heisenberg.md  kagome_lattice.html  kagome_lattice.md  kitaev_bdg.html  kitaev_bdg.md  rice_mele.html  rice_mele.md  square_lattice.html  square_lattice.md  ssh.html  ssh.md  tight_binding_chain.html  tight_binding_chain.md  (+6 more)
docs/notebooks/: 01_ising_spin_chains.html  02_spin_observables_and_correlations.html  03_spin_chain_model_comparison.html  04_heisenberg_ladder_spectrum.html  05_hubbard_exact_diagonalization.html  06_ssh_rice_mele_comparison.html  07_boundary_conditions_and_finite_size.html  08_aubry_andre_localization.html  09_kitaev_bdg_symmetry.html  10_hofstadter_flux_sweep.html  11_haldane_kagome_lattices.html  12_custom_lattice_workflow.html  13_hamiltonian_structure_gallery.html  14_sparse_dense_scaling.html  15_pennylane_export.html  16_model_registry_and_cli.html  17_cli_plot_walkthrough.html  17_portable_physical_system_records.html  18_model_import_export_and_bundles.html  19_graph_spin_model_workflow.html  20_fixed_magnetization_spin_sectors.html  21_lattice_import_and_transformations.html  22_model_intake_workflow.html  cli_plot_walkthrough.html  haldane_kagome_lattices.html  heisenberg_ladder_spectrum.html  hofstadter_flux_sweep.html  hubbard_exact_diagonalization.html  ising_spin_chains.html  kitaev_bdg_symmetry.html  (+3 more)
examples/: bose_hubbard_spectrum.py  external_matrix_import.py  haldane_matrix_structure.py  haldane_spectrum.py  hamiltonian_matrix.py  heisenberg_density.py  heisenberg_density_of_states.py  hofstadter_butterfly.py  ising_spectrum.py  kagome_graph.py  physical_interaction_graph.py  portable_model_bundle.py  rice_mele_spectrum.py  ssh_edge_state.py  tight_binding_spectrum.py
notebooks/: 01_ising_spin_chains.ipynb  02_spin_observables_and_correlations.ipynb  03_spin_chain_model_comparison.ipynb  04_heisenberg_ladder_spectrum.ipynb  05_hubbard_exact_diagonalization.ipynb  06_ssh_rice_mele_comparison.ipynb  07_boundary_conditions_and_finite_size.ipynb  08_aubry_andre_localization.ipynb  09_kitaev_bdg_symmetry.ipynb  10_hofstadter_flux_sweep.ipynb  11_haldane_kagome_lattices.ipynb  12_custom_lattice_workflow.ipynb  13_hamiltonian_structure_gallery.ipynb  14_sparse_dense_scaling.ipynb  15_pennylane_export.ipynb  16_model_registry_and_cli.ipynb  17_cli_plot_walkthrough.ipynb  17_portable_physical_system_records.ipynb  18_model_import_export_and_bundles.ipynb  19_graph_spin_model_workflow.ipynb  20_fixed_magnetization_spin_sectors.ipynb  21_lattice_import_and_transformations.ipynb  22_model_intake_workflow.ipynb  cli_plot_walkthrough.ipynb  haldane_kagome_lattices.ipynb  heisenberg_ladder_spectrum.ipynb  hofstadter_flux_sweep.ipynb  hubbard_exact_diagonalization.ipynb  ising_spin_chains.ipynb  kitaev_bdg_symmetry.ipynb  model_registry_and_cli.ipynb  sparse_dense_scaling.ipynb  ssh_rice_mele_comparison.ipynb
scripts/: build_model_docs.py  performance_regression.py  summarize_notebooks.py
tests/: test_advanced.py  test_analysis.py  test_cli_helpers.py  test_compatibility_contracts.py  test_diagnostics.py  test_discovery.py  test_documentation.py  test_export.py  test_geometry_registry_cli.py  test_intake.py  test_interchange.py  test_model_coherence.py  test_models.py  test_module_boundaries.py  test_observables.py  test_optional_adapters.py  test_parity_sectors.py  test_performance_budgets.py  test_periodic.py  test_plotting.py  test_public_validation.py  test_real_optional_adapters.py  test_reduced_transformations_and_benchmarks.py  test_specs.py  test_spin_sectors.py  test_spin_sparse.py  test_storage.py  test_transformations.py  test_v018.py  test_validation.py
(+57 files in other folders)
