[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantum-lattice-models"
version = "0.1.10"
description = "Portable quantum lattice models, sparse sectors, reference analysis, and interchange."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Sid Richards" }
]
keywords = [
  "quantum",
  "lattice models",
  "exact diagonalization",
  "hamiltonians",
  "quantum algorithms"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib"
]

[project.optional-dependencies]
dev = [
  "black[jupyter]",
  "build",
  "markdown-it-py",
  "mypy",
  "pytest",
  "pytest-cov",
  "ruff",
  "twine"
]
notebooks = [
  "ipykernel",
  "markdown-it-py",
  "notebook"
]
pennylane = [
  "pennylane"
]
networkx = [
  "networkx>=3"
]
yaml = [
  "pyyaml>=6"
]
ase = [
  "ase>=3.22"
]
openfermion = [
  "openfermion>=1.6"
]
qiskit = [
  "qiskit>=1"
]
qutip = [
  "qutip>=5"
]
netket = [
  "netket>=3"
]
quspin = [
  "quspin>=1"
]

[project.urls]
Homepage = "https://github.com/SidRichardsQuantum/Quantum_Lattice_Models"
Issues = "https://github.com/SidRichardsQuantum/Quantum_Lattice_Models/issues"

[project.scripts]
quantum-lattice = "quantum_lattice_models.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.coverage.run]
source = ["quantum_lattice_models"]
branch = true

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.black]
target-version = ["py310"]
line-length = 100
extend-exclude = '''
/(
  \.venv
  | \.matplotlib-cache
  | build
  | dist
  | images
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  ".venv",
  ".matplotlib-cache",
  "build",
  "dist",
  "images"
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
files = [
  "src/quantum_lattice_models/_registry_core.py",
  "src/quantum_lattice_models/_schema_codec.py",
  "src/quantum_lattice_models/adapters.py",
  "src/quantum_lattice_models/geometry.py",
  "src/quantum_lattice_models/intake.py",
  "src/quantum_lattice_models/operators.py",
  "src/quantum_lattice_models/topological.py",
  "src/quantum_lattice_models/types.py",
  "src/quantum_lattice_models/models",
]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true

[tool.hatch.build.targets.wheel]
packages = ["src/quantum_lattice_models"]
